--- a/cuda/cuda_meta_parameters.yaml
+++ b/cuda/cuda_meta_parameters.yaml
@@ -327,9 +327,23 @@ meta_parameters:
   cuMemAllocAsync_ptsz:
     - [OutScalar, dptr]
   cuMemPoolSetAttribute:
-    - [InLTTng, value, ctf_sequence_text, uint8_t, value_val, value, size_t, "attr == CU_MEMPOOL_ATTR_RELEASE_THRESHOLD ? sizeof(cuuint64_t) : attr == CU_MEMPOOL_ATTR_REUSE_FOLLOW_EVENT_DEPENDENCIES ? sizeof(int) : attr == CU_MEMPOOL_ATTR_REUSE_ALLOW_OPPORTUNISTIC ? sizeof(int) : attr == CU_MEMPOOL_ATTR_REUSE_ALLOW_INTERNAL_DEPENDENCIES ? sizeof(int) : attr == CU_MEMPOOL_ATTR_RESERVED_MEM_HIGH ? sizeof(cuuint64_t) : attr == CU_MEMPOOL_ATTR_USED_MEM_HIGH ? sizeof(cuuint64_t) : 0"]
+    - [InLTTng, value, ctf_sequence_text, uint8_t, value_val, value, size_t, "\
+      attr == CU_MEMPOOL_ATTR_REUSE_FOLLOW_EVENT_DEPENDENCIES ? sizeof(int) : \
+      attr == CU_MEMPOOL_ATTR_REUSE_ALLOW_OPPORTUNISTIC ? sizeof(int) : \
+      attr == CU_MEMPOOL_ATTR_REUSE_ALLOW_INTERNAL_DEPENDENCIES ? sizeof(int) : \
+      attr == CU_MEMPOOL_ATTR_RELEASE_THRESHOLD ? sizeof(cuuint64_t) : \
+      attr == CU_MEMPOOL_ATTR_RESERVED_MEM_HIGH ? sizeof(cuuint64_t) : \
+      attr == CU_MEMPOOL_ATTR_USED_MEM_HIGH ? sizeof(cuuint64_t) : 0"]
   cuMemPoolGetAttribute:
-    - [OutLTTng, value, ctf_sequence_text, uint8_t, value_val, value, size_t, "attr == CU_MEMPOOL_ATTR_RELEASE_THRESHOLD ? sizeof(cuuint64_t) : attr == CU_MEMPOOL_ATTR_REUSE_FOLLOW_EVENT_DEPENDENCIES ? sizeof(int) : attr == CU_MEMPOOL_ATTR_REUSE_ALLOW_OPPORTUNISTIC ? sizeof(int) : attr == CU_MEMPOOL_ATTR_REUSE_ALLOW_INTERNAL_DEPENDENCIES ? sizeof(int) : attr == CU_MEMPOOL_ATTR_RESERVED_MEM_CURRENT ? sizeof(cuuint64_t) : attr == CU_MEMPOOL_ATTR_RESERVED_MEM_HIGH ? sizeof(cuuint64_t) : attr == CU_MEMPOOL_ATTR_USED_MEM_CURRENT ? sizeof(cuuint64_t) : attr == CU_MEMPOOL_ATTR_USED_MEM_HIGH ? sizeof(cuuint64_t) : 0"]
+    - [OutLTTng, value, ctf_sequence_text, uint8_t, value_val, value, size_t, "\
+      attr == CU_MEMPOOL_ATTR_REUSE_FOLLOW_EVENT_DEPENDENCIES ? sizeof(int) : \
+      attr == CU_MEMPOOL_ATTR_REUSE_ALLOW_OPPORTUNISTIC ? sizeof(int) : \
+      attr == CU_MEMPOOL_ATTR_REUSE_ALLOW_INTERNAL_DEPENDENCIES ? sizeof(int) : \
+      attr == CU_MEMPOOL_ATTR_RELEASE_THRESHOLD ? sizeof(cuuint64_t) : \
+      attr == CU_MEMPOOL_ATTR_RESERVED_MEM_CURRENT ? sizeof(cuuint64_t) : \
+      attr == CU_MEMPOOL_ATTR_RESERVED_MEM_HIGH ? sizeof(cuuint64_t) : \
+      attr == CU_MEMPOOL_ATTR_USED_MEM_CURRENT ? sizeof(cuuint64_t) : \
+      attr == CU_MEMPOOL_ATTR_USED_MEM_HIGH ? sizeof(cuuint64_t) : 0"]
   cuMemPoolSetAccess:
     - [InArray, map, count]
   cuMemPoolGetAccess:
@@ -359,13 +373,32 @@ meta_parameters:
     - [InScalar, prop]
     - [OutScalar, granularity]
   cuPointerGetAttribute:
-    - [OutLTTng, data, ctf_sequence_text, uint8_t, data_val, data, size_t, "attribute == CU_POINTER_ATTRIBUTE_CONTEXT ? sizeof(CUcontext) : attribute == CU_POINTER_ATTRIBUTE_MEMORY_TYPE ? sizeof(unsigned int) : attribute == CU_POINTER_ATTRIBUTE_DEVICE_POINTER ? sizeof(CUdeviceptr) : attribute == CU_POINTER_ATTRIBUTE_HOST_POINTER ? sizeof(void *) : attribute == CU_POINTER_ATTRIBUTE_P2P_TOKENS ? sizeof(CUDA_POINTER_ATTRIBUTE_P2P_TOKENS) : attribute == CU_POINTER_ATTRIBUTE_SYNC_MEMOPS ? sizeof(int) : attribute == CU_POINTER_ATTRIBUTE_BUFFER_ID ? sizeof(unsigned long long) : attribute == CU_POINTER_ATTRIBUTE_IS_MANAGED ? sizeof(int) : attribute == CU_POINTER_ATTRIBUTE_DEVICE_ORDINAL ? sizeof(int) : attribute == CU_POINTER_ATTRIBUTE_IS_LEGACY_CUDA_IPC_CAPABLE ? sizeof(int) : attribute == CU_POINTER_ATTRIBUTE_RANGE_START_ADDR ? sizeof(void *) : attribute == CU_POINTER_ATTRIBUTE_RANGE_SIZE ? sizeof(size_t) : attribute == CU_POINTER_ATTRIBUTE_MAPPED ? sizeof(int) : attribute == CU_POINTER_ATTRIBUTE_ALLOWED_HANDLE_TYPES ? sizeof(CUmemAllocationHandleType) : attribute == CU_POINTER_ATTRIBUTE_MEMPOOL_HANDLE ? sizeof(CUmemoryPool) : 0"]
+    - [OutLTTng, data, ctf_sequence_text, uint8_t, data_val, data, size_t, "\
+      attribute == CU_POINTER_ATTRIBUTE_CONTEXT ? sizeof(CUcontext) : \
+      attribute == CU_POINTER_ATTRIBUTE_MEMORY_TYPE ? sizeof(unsigned int) : \
+      attribute == CU_POINTER_ATTRIBUTE_DEVICE_POINTER ? sizeof(CUdeviceptr) : \
+      attribute == CU_POINTER_ATTRIBUTE_HOST_POINTER ? sizeof(void *) : \
+      attribute == CU_POINTER_ATTRIBUTE_P2P_TOKENS ? sizeof(CUDA_POINTER_ATTRIBUTE_P2P_TOKENS) : \
+      attribute == CU_POINTER_ATTRIBUTE_SYNC_MEMOPS ? sizeof(int) : \
+      attribute == CU_POINTER_ATTRIBUTE_BUFFER_ID ? sizeof(unsigned long long) : \
+      attribute == CU_POINTER_ATTRIBUTE_IS_MANAGED ? sizeof(int) : \
+      attribute == CU_POINTER_ATTRIBUTE_DEVICE_ORDINAL ? sizeof(int) : \
+      attribute == CU_POINTER_ATTRIBUTE_IS_LEGACY_CUDA_IPC_CAPABLE ? sizeof(int) : \
+      attribute == CU_POINTER_ATTRIBUTE_RANGE_START_ADDR ? sizeof(void *) : \
+      attribute == CU_POINTER_ATTRIBUTE_RANGE_SIZE ? sizeof(size_t) : \
+      attribute == CU_POINTER_ATTRIBUTE_MAPPED ? sizeof(int) : \
+      attribute == CU_POINTER_ATTRIBUTE_ALLOWED_HANDLE_TYPES ? sizeof(CUmemAllocationHandleType) : \
+      attribute == CU_POINTER_ATTRIBUTE_IS_GPU_DIRECT_RDMA_CAPABLE ? sizeof(int) : \
+      attribute == CU_POINTER_ATTRIBUTE_ACCESS_FLAGS ? sizeof(CUDA_POINTER_ATTRIBUTE_ACCESS_FLAGS) : \
+      attribute == CU_POINTER_ATTRIBUTE_MEMPOOL_HANDLE ? sizeof(CUmemoryPool) : \
+      attribute == CU_POINTER_ATTRIBUTE_MAPPING_SIZE ? sizeof(size_t) : \
+      attribute == CU_POINTER_ATTRIBUTE_MAPPING_BASE_ADDR ? sizeof(void *) : \
+      attribute == CU_POINTER_ATTRIBUTE_MEMORY_BLOCK_ID ? sizeof(unsigned long long) : 0"]
   cuMemRangeGetAttribute:
     - [OutArray, data, dataSize]
   cuMemRangeGetAttributes:
     - [InArray, attributes, numAttributes]
     - [InArray, dataSizes, numAttributes]
-    - [OutArray, data, numAttributes]
   cuPointerSetAttribute:
     - [InLTTng, value, ctf_sequence_text, uint8_t, value_val, value, size_t, "attribute == CU_POINTER_ATTRIBUTE_SYNC_MEMOPS ? sizeof(uint8_t) : 0"]
   cuPointerGetAttributes:
@@ -593,9 +626,15 @@ meta_parameters:
   cuGraphMemFreeNodeGetParams:
     - [OutScalar, dptr_out]
   cuDeviceGetGraphMemAttribute:
-    - [OutLTTng, value, ctf_sequence_text, uint8_t, value_val, value, size_t, "attr == CU_GRAPH_MEM_ATTR_USED_MEM_CURRENT ? sizeof(cuuint64_t) : attr == CU_GRAPH_MEM_ATTR_USED_MEM_HIGH ? sizeof(cuuint64_t) : attr == CU_GRAPH_MEM_ATTR_RESERVED_MEM_CURRENT ? sizeof(cuuint64_t) : attr == CU_GRAPH_MEM_ATTR_RESERVED_MEM_HIGH ? sizeof(cuuint64_t) : 0"]
+    - [OutLTTng, value, ctf_sequence_text, uint8_t, value_val, value, size_t, "\
+      attr == CU_GRAPH_MEM_ATTR_USED_MEM_CURRENT ? sizeof(cuuint64_t) : \
+      attr == CU_GRAPH_MEM_ATTR_USED_MEM_HIGH ? sizeof(cuuint64_t) : \
+      attr == CU_GRAPH_MEM_ATTR_RESERVED_MEM_CURRENT ? sizeof(cuuint64_t) : \
+      attr == CU_GRAPH_MEM_ATTR_RESERVED_MEM_HIGH ? sizeof(cuuint64_t) : 0"]
   cuDeviceSetGraphMemAttribute:
-    - [InLTTng, value, ctf_sequence_text, uint8_t, value_val, value, size_t, "attr == CU_GRAPH_MEM_ATTR_USED_MEM_HIGH ? sizeof(cuuint64_t) : attr == CU_GRAPH_MEM_ATTR_RESERVED_MEM_HIGH ? sizeof(cuuint64_t) : 0"]
+    - [InLTTng, value, ctf_sequence_text, uint8_t, value_val, value, size_t, "\
+      attr == CU_GRAPH_MEM_ATTR_USED_MEM_HIGH ? sizeof(cuuint64_t) : \
+      attr == CU_GRAPH_MEM_ATTR_RESERVED_MEM_HIGH ? sizeof(cuuint64_t) : 0"]
   cuGraphClone:
     - [OutScalar, phGraphClone]
   cuGraphNodeFindInClone:
