--- a/.github/workflows/presubmit.yml
+++ b/.github/workflows/presubmit.yml
@@ -31,8 +31,7 @@ jobs:
       - run: sudo apt update; sudo apt install -y gcc g++ lttng-tools liblttng-ust-dev ruby ruby-dev elfutils libelf-dev libdw-dev libprotobuf-dev protobuf-compiler
         if: steps.babeltrace2.outputs.cache-hit != 'true'
       - name: Include Ruby binaries in PATH
-        run: |
-          echo "$HOME/.local/share/gem/ruby/3.0.0/bin" >> $GITHUB_PATH
+        run: echo "$HOME/.local/share/gem/ruby/3.0.0/bin" >> $GITHUB_PATH
       - run: gem install --user-install cast-to-yaml nokogiri babeltrace2 opencl_ruby_ffi metababel
         if: steps.babeltrace2.outputs.cache-hit != 'true'
       - run: wget https://www.efficios.com/files/babeltrace/babeltrace2-2.0.4.tar.bz2
@@ -73,6 +72,8 @@ jobs:
           path: ~/babeltrace2/2.0.4
           key: ${{ runner.os }}-build-${{ env.cache-name }}
       - run: sudo apt update; sudo apt install -y gcc g++ lttng-tools liblttng-ust-dev ruby ruby-dev elfutils libelf-dev libdw-dev libprotobuf-dev protobuf-compiler
+      - name: Include Ruby binaries in PATH
+        run: echo "$HOME/.local/share/gem/ruby/3.0.0/bin" >> $GITHUB_PATH
       - run: gem install --user-install cast-to-yaml nokogiri babeltrace2 opencl_ruby_ffi metababel
       - name: Load Babeltrace2
         run: |
@@ -105,6 +106,8 @@ jobs:
           path: ~/babeltrace2/2.0.4
           key: ${{ runner.os }}-build-${{ env.cache-name }}
       - run: sudo apt update; sudo apt install -y gcc g++ lttng-tools liblttng-ust-dev ruby ruby-dev elfutils libelf-dev libdw-dev libprotobuf-dev protobuf-compiler
+      - name: Include Ruby binaries in PATH
+        run: echo "$HOME/.local/share/gem/ruby/3.0.0/bin" >> $GITHUB_PATH
       - run: gem install --user-install cast-to-yaml nokogiri babeltrace2 opencl_ruby_ffi metababel
       - name: Load Babeltrace2
         run: |
@@ -133,6 +136,8 @@ jobs:
           path: ~/babeltrace2/2.0.4
           key: ${{ runner.os }}-build-${{ env.cache-name }}
       - run: sudo apt update; sudo apt install -y gcc g++ lttng-tools liblttng-ust-dev ruby ruby-dev elfutils libelf-dev libdw-dev libprotobuf-dev protobuf-compiler
+      - name: Include Ruby binaries in PATH
+        run: echo "$HOME/.local/share/gem/ruby/3.0.0/bin" >> $GITHUB_PATH
       - run: gem install --user-install cast-to-yaml nokogiri babeltrace2 opencl_ruby_ffi metababel
       - name: Load Babeltrace2
         run: |
@@ -163,6 +168,8 @@ jobs:
           path: ~/babeltrace2/2.0.4
           key: ${{ runner.os }}-build-${{ env.cache-name }}
       - run: sudo apt update; sudo apt install -y gcc g++ lttng-tools liblttng-ust-dev ruby ruby-dev elfutils libelf-dev libdw-dev libprotobuf-dev protobuf-compiler
+      - name: Include Ruby binaries in PATH
+        run: echo "$HOME/.local/share/gem/ruby/3.0.0/bin" >> $GITHUB_PATH
       - run: gem install --user-install cast-to-yaml nokogiri babeltrace2 opencl_ruby_ffi metababel
       - name: Load Babeltrace2
         run: |
